feat: add 10 deep-dive articles (JMM, ThreadPoolExecutor, Deadlock, Memory Leak, String, Spring Security, Exception Handling, Annotation, Kafka, Lambda)
- JMM: visibility, ordering, happens-before, memory barriers, volatile/synchronized JMM view
- ThreadPoolExecutor: ctl bit-field, Worker lifecycle, BlockingQueue strategies, rejection handlers
- Deadlock: Coffman conditions, jstack analysis, ThreadMXBean detection, lock ordering
- Memory Leak: GC Roots, Reference types, ThreadLocal leak, ClassLoader leak, MAT analysis
- String: String Pool, Compact Strings JDK 9, invokedynamic concat, G1 Dedup
- Spring Security: filter chain, authentication flow, SecurityContext, BCrypt, JWT, CSRF
- Exception Handling: exception table bytecode, try-with-resources, fillInStackTrace cost
- Annotation: RetentionPolicy, APT, Spring annotation internals, AOP proxy
- Kafka Spring Boot: producer/consumer internals, offset management, error handling, EOS
- Functional Interface & Lambda: invokedynamic, LambdaMetafactory, method reference, closure

Co-Authored-By: Hiệp Bá <vanhiep99w@gmail.com>